[gd_scene load_steps=9 format=3 uid="uid://b8w4xurvalqr0"]

[ext_resource type="Texture2D" uid="uid://cotwa8gtf7spn" path="res://sprites/redGem.png" id="1_boiit"]
[ext_resource type="Script" path="res://scenes/gemsUI.gd" id="1_xgvxi"]
[ext_resource type="Texture2D" uid="uid://c8apbaeprlnky" path="res://sprites/orangeGem.png" id="2_l6632"]
[ext_resource type="Texture2D" uid="uid://ebk6ade5ppux" path="res://sprites/yellowGem.png" id="3_ci3mn"]
[ext_resource type="Texture2D" uid="uid://cwrs1r2440yw2" path="res://sprites/greenGem.png" id="4_d5v2w"]
[ext_resource type="Texture2D" uid="uid://ch8tij88o4svb" path="res://sprites/blueGem.png" id="5_klvdd"]
[ext_resource type="Texture2D" uid="uid://c1lsfd5cj5b4s" path="res://sprites/pinkGem.png" id="6_sgusr"]
[ext_resource type="Texture2D" uid="uid://ctqm8gq4k0riv" path="res://sprites/purpleGem.png" id="7_5u5u5"]

[node name="GemsUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xgvxi")
unlockedGems = Array[int]([0, 1, 2, 3, 4, 5, 6])

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -386.5
offset_top = -107.0
offset_right = 386.5
grow_horizontal = 2
grow_vertical = 0

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/PanelContainer"]
layout_mode = 2
alignment = 1

[node name="RedGem" type="TextureRect" parent="CanvasLayer/PanelContainer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("1_boiit")
expand_mode = 2
stretch_mode = 5

[node name="OrangeGem" type="TextureRect" parent="CanvasLayer/PanelContainer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("2_l6632")
expand_mode = 2
stretch_mode = 5

[node name="YellowGem" type="TextureRect" parent="CanvasLayer/PanelContainer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("3_ci3mn")
expand_mode = 2
stretch_mode = 5

[node name="GreenGem" type="TextureRect" parent="CanvasLayer/PanelContainer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("4_d5v2w")
expand_mode = 2
stretch_mode = 5

[node name="BlueGem" type="TextureRect" parent="CanvasLayer/PanelContainer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("5_klvdd")
expand_mode = 2
stretch_mode = 5

[node name="PinkGem" type="TextureRect" parent="CanvasLayer/PanelContainer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("6_sgusr")
expand_mode = 2
stretch_mode = 5

[node name="PurpleGem" type="TextureRect" parent="CanvasLayer/PanelContainer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("7_5u5u5")
expand_mode = 2
stretch_mode = 5
